# ashandy-agent

./: .gitignore  BUGFIX_MEMORY_STATE.md  BUGFIX_PAYMENT_LINKS.md  LICENSE  MERGE_RESOLUTION.md  README.md  RESTART_GUIDE.md  SYSTEM_DOCUMENTATION.md  WEBHOOK_MEMORY_FIX.md  alembic.ini  clear_cache.py  clear_semantic_cache.py  docker-compose.yml  main.py  output.json  products.json  pyproject.toml  requirements.txt  simulate_msg.py  test.txt  test_security_integration.py
alembic/: MIGRATION_GUIDE.md  env.py
app/: __init__.py  main.py
config/: settings.py
deployment/: Dockerfile  deploy_aws_guide.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
docs/: AGENTIC_WORKFLOW.md  MEMORY_SYSTEM.md  QUICK_REFERENCE.md  README.md  SYSTEM_DOCUMENTATION.md  api_spec.md  db_schema.sql  items_export.xlsx
mcp-servers/knowledge-server/: knowledge_server.py  pyproject.toml
mcp-servers/knowledge-server/src/: vector_store.py
mcp-servers/logistics-server/: logistics_server.py  pyproject.toml
mcp-servers/logistics-server/src/: tomtom_client.py
mcp-servers/payment-server/: ashandy_payment_server.py  pyproject.toml
mcp-servers/payment-server/src/: paystack_client.py
mcp-servers/pos-server/: ashandy_pos_server.py  pyproject.toml
mcp-servers/pos-server/src/: pos_client.py
mocks/: README.md  customer_profiles.json  delivery_zones.json  products.json
scripts/: clear_cache.py  comprehensive_system_test.py  db_migrate.py  ingest_instagram.py  ingest_phppos.py  output.json  populate_pinecone.py  pos_local_sync.py  seed_data.py  test_dispatcher_fix.py  test_graph.py  test_ingest.py  test_memory_save.py  test_report_20251217_203736.json  test_twilio_webhook_local.py
tests/: __init__.py  conftest.py  test_agents.py  test_delivery_workflow.py  test_endpoints.py  test_integrations.py  test_tools.py
(+147 files in other folders)
